# sql-optimization-env

./: .env.example  .gitignore  AICOACH_IMPLEMENTATION.md  DEPLOYMENT_STATUS.md  Dockerfile  FIXES_APPLIED.md  PHASE2_FIXES.md  README.md  TEST_INSTRUCTIONS.md  check_space_status.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_boundary_fast.py  test_live.py  test_live_endpoints.py  test_live_simple.py  test_phases.py  test_space.ps1  test_sweep.py  test_validator_exact.py  verify_scores.py
curriculum/: curriculum_engine.py  level_config.py  progress_tracker.py
data/: seed_database.py
data/fixtures/: generate_fixtures.py
data/schemas/: gst_schema.sql  mgnrega_schema.sql  pds_schema.sql  railway_schema.sql
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/hooks/: useCurriculum.ts  useEnvironment.ts
frontend/lib/: api.ts  types.ts
server/: app.py  environment.py  hack_detector.py  main.py  models.py  reward.py
server/graders/: antipattern_grader.py  equivalence_grader.py  index_grader.py  speedup_grader.py
static/: 404.html  index.html  index.txt
static/404/: index.html
static/dashboard/: index.html  index.txt
tasks/: _schema_loader.py  base_task.py  task_registry.py
tasks/easy/: __init__.py  gst_missing_index.py  mgnrega_count.py  pds_select_star.py  railway_simple_filter.py
tasks/hard/: __init__.py  gst_multi_join.py  mgnrega_implicit_cast.py  mgnrega_schema_e.py  pds_n_plus_one.py  railway_tatkal_workload.py
(+49 files in other folders)
