[project]
name = "sql-optimization-env"
version = "1.0.0"
description = "SQL Optimization OpenEnv - RL environment for training agents to optimize SQL queries on Indian government schemas"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai>=2.7.2",
    "requests==2.32.2",
    "python-dotenv==1.0.1",
    "jinja2==3.1.4",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "tasks*", "curriculum*", "data*"]